implemented update api
